# AgentOfDeath

./: .gitignore  README.md  run-local.sh
backend/: .env.example  README.md  claudeService.py  exampleService.py  main.py  pyproject.toml  subscriptionService.py
backend/cancel_api/: models.py
backend/cancel_api/cancel/: agent.py  chain.py  crawler.py  templates.py
cancel_api/: .envrc  __main__.py  app.py  requirements.txt
cancel_api/cancel/: chain.py
frontend/my-app/: package-lock.json  package.json  tailwind.config.ts
frontend/my-app/src/pages/: addSubscription.tsx  bankStatementParser.tsx  index.tsx  notes.ts  pdf.tsx  personalWelcomeMessage.tsx  welcomeBackPage.tsx  welcomePage.tsx
frontend/my-app/src/styles/: globals.css
